@@ -3779,10 +3779,9 @@ name|j
 operator|++
 control|)
 block|{
-name|fs
-operator|.
-name|rename
-argument_list|(
+name|Path
+name|source
+init|=
 name|items
 index|[
 name|j
@@ -3790,7 +3789,10 @@ index|]
 operator|.
 name|getPath
 argument_list|()
-argument_list|,
+decl_stmt|;
+name|Path
+name|target
+init|=
 operator|new
 name|Path
 argument_list|(
@@ -3807,8 +3809,34 @@ operator|.
 name|getName
 argument_list|()
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|fs
+operator|.
+name|rename
+argument_list|(
+name|source
+argument_list|,
+name|target
 argument_list|)
-expr_stmt|;
+condition|)
+block|{
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"Cannot move "
+operator|+
+name|source
+operator|+
+literal|" to "
+operator|+
+name|target
+argument_list|)
+throw|;
+block|}
 block|}
 block|}
 block|}
